2014-07-31  Andreas Kling  <akling@apple.com>

        Remove the JSC::OverridesVisitChildren flag.
        <https://webkit.org/b/135489>

        Except for 3 special classes, the visitChildren() call is always
        dispatched through the method table (see SlotVisitor.cpp.)

        The OverridesVisitChildren flag doesn't actually do anything.
        It could be used to implement a non-virtual direct call to
        JSCell::visitChildren, bypassing the method table for some objects,
        but such a micro-optimization seems like a weak trade for all this
        code complexity. Instead, just remove the flag.

        This change frees up an inline flag bit in JSCell.

        Reviewed by Geoffrey Garen.

        * API/JSAPIWrapperObject.h:
        * API/JSAPIWrapperObject.mm:
        (JSC::JSAPIWrapperObject::visitChildren):
        * API/JSCallbackObject.h:
        (JSC::JSCallbackObject::visitChildren):
        * bytecode/UnlinkedCodeBlock.cpp:
        (JSC::UnlinkedFunctionExecutable::visitChildren):
        (JSC::UnlinkedCodeBlock::visitChildren):
        (JSC::UnlinkedProgramCodeBlock::visitChildren):
        * bytecode/UnlinkedCodeBlock.h:
        * debugger/DebuggerScope.cpp:
        (JSC::DebuggerScope::visitChildren):
        * debugger/DebuggerScope.h:
        * jsc.cpp:
        * runtime/Arguments.cpp:
        (JSC::Arguments::visitChildren):
        * runtime/Arguments.h:
        * runtime/Executable.cpp:
        (JSC::EvalExecutable::visitChildren):
        (JSC::ProgramExecutable::visitChildren):
        (JSC::FunctionExecutable::visitChildren):
        * runtime/Executable.h:
        * runtime/GetterSetter.cpp:
        (JSC::GetterSetter::visitChildren):
        * runtime/GetterSetter.h:
        (JSC::GetterSetter::createStructure):
        * runtime/JSAPIValueWrapper.h:
        (JSC::JSAPIValueWrapper::createStructure):
        * runtime/JSActivation.cpp:
        (JSC::JSActivation::visitChildren):
        * runtime/JSActivation.h: