@@ -1,3 +1,6 @@
 include(OptionsWindows)
 
-set(PORT_FALLBACK Win)
+set(WTF_USE_CG 1)
+set(WTF_USE_CA 1)
+set(WTF_USE_CFNETWORK 1)
+set(WTF_USE_ICU_UNICODE 1)
