@@ -174,6 +174,7 @@ set(GTK_API_VERSION 3.0)
 set(WTF_USE_SOUP 1)
 set(WTF_USE_UDIS86 1)
 
+set(WTF_LIBRARY_TYPE STATIC)
 set(WTF_OUTPUT_NAME WTFGTK)
 set(JavaScriptCore_OUTPUT_NAME javascriptcoregtk-${WEBKITGTK_API_VERSION})
 set(WebCore_OUTPUT_NAME WebCoreGTK)
