@@ -1,3 +1,6 @@
 include(OptionsWindows)
 
-set(PORT_FALLBACK Win)
+set(WTF_PLATFORM_WIN_CAIRO 1)
+set(WTF_USE_CF 1)
+set(WTF_USE_CURL 1)
+set(WTF_USE_ICU_UNICODE 1)
