@@ -1,3 +1,13 @@
+2014-07-31  Alex Christensen  <achristensen@webkit.org>
+
+        Progress towards cmake on Windows.
+        https://bugs.webkit.org/show_bug.cgi?id=135484
+
+        Reviewed by Martin Robinson.
+
+        * wtf/CMakeLists.txt:
+        Added WTF_LIBRARY_TYPE because Windows needs WTF to be a shared library.
+
 2014-07-30  Andreas Kling  <akling@apple.com>
 
         PropertyName's internal string is always atomic.
